# crm-implementation

./: .env  README.md  pyproject.toml  test.py
src/addons/: hookspecs.py  implementations.py
src/addons/integrations/: hookspecs.py  plugin_manager.py
src/addons/integrations/plugins/: __init__.py  capsule.py  copper.py  keap.py  kommo.py  pipedrive.py
src/api/: __init__.py  main.py
src/api/entrypoints/: callbacks.py  models.py  routes.py
src/config/: settings.py
src/core/: dependencies.py  exceptions.py  extensions.py  lifespan.py  middlewares.py  utils.py
src/database/: contacts.json  handlers.py  old_contacts.json  queries.py  states.json  tokens.json
src/modules/: handlers.py  queries.py
src/utils/: state_manager.py
